# stellar-did-credit

./: CONTRIBUTING.md  Cargo.toml  README.md  deployments.testnet.json
.github/ISSUE_TEMPLATE/: wave-issue.md
contracts/credit-oracle/src/: lib.rs
contracts/identity-oracle/src/: lib.rs
contracts/revocation-registry/src/: lib.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: integration_test.rs
contracts/tests/test_snapshots/integration_test/tests/: test_full_protocol_flow.1.json
docs/: did-spec.md
