[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
identity-oracle = { path = "../identity-oracle" }
credit-oracle = { path = "../credit-oracle" }
revocation-registry = { path = "../revocation-registry" }
